@@ -19,7 +19,6 @@ int cpt_ctx_init (hashcat_ctx_t *hashcat_ctx)
   if (user_options->left        == true) return 0;
   if (user_options->opencl_info == true) return 0;
   if (user_options->show        == true) return 0;
-  if (user_options->stdout_flag == true) return 0;
   if (user_options->usage       == true) return 0;
   if (user_options->version     == true) return 0;
 
