@@ -390,7 +390,7 @@ int user_options_sanity (hashcat_ctx_t *hashcat_ctx)
     return -1;
   }
 
-  if (user_options->hash_mode > 14100)
+  if (user_options->hash_mode > 99999)
   {
     event_log_error (hashcat_ctx, "Invalid hash-type specified");
 
