@@ -24,6 +24,7 @@
 
 - Added new hash-mode 14000 = DES (PT = $salt, key = $pass)
 - Added new hash-mode 14100 = 3DES (PT = $salt, key = $pass)
+- Added new hash-mode 99999 = Plaintext
 
 * changes v3.00 -> v3.10:
 
